Interfaz(Login) se agregaron las siguientes herramientas. (Panel, Texbox, Label, Button, pictureBox y linkLabel) y se agrego el logo de software y una imagen de fondo.

--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Formulario\Formulario.Designer.cs">
       <DependentUpon>Formulario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Login\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu_P\Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formulario\Formulario.resx">
       <DependentUpon>Formulario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu_P\Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
