--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
@@ -52,11 +52,11 @@
     <Compile Include="Formulario\Formulario.Designer.cs">
       <DependentUpon>Formulario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login\Form1.cs">
+    <Compile Include="Login\Form_Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Login\Form_Login.Designer.cs">
+      <DependentUpon>Form_Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Menu_P\Menu.cs">
       <SubType>Form</SubType>
@@ -72,8 +72,8 @@
     <EmbeddedResource Include="Formulario\Formulario.resx">
       <DependentUpon>Formulario.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Login\Form_Login.resx">
+      <DependentUpon>Form_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu_P\Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
