--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/Alegria-EmbotelladaModel.csdl|res://*/Alegria-EmbotelladaModel.ssdl|res://*/Alegria-EmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;user id=AlegriaEmbotelladaAppESC;password=ut335al3gr143mb0t3ll4d4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
