Funcion a la al boton acceder  y configuracion de appconfig

--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
@@ -33,7 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -91,6 +100,7 @@
     <None Include="bin\Debug\AlegriaEmbotelladaWinFromApp.exe.config" />
     <None Include="bin\Debug\AlegriaEmbotelladaWinFromApp.vshost.exe.config" />
     <None Include="bin\Debug\AlegriaEmbotelladaWinFromApp.vshost.exe.manifest" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -108,6 +118,10 @@
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
       <Project>{4ebbf9e3-9c7c-4d68-bd2b-919b61c51fbc}</Project>
       <Name>BusinessLogic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataAcces\DataAccess.csproj">
+      <Project>{89e13703-edd0-4058-b882-dd5b1e4806e4}</Project>
+      <Name>DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
