Modificacion la base de Datos

--- a/Alegria-Embotellada/DataAcces/DataAccess.csproj
+++ b/Alegria-Embotellada/DataAcces/DataAccess.csproj
@@ -103,6 +103,8 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>AlegriaEmbotelladaModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="AlegriaEmbotelladaModel.edmx.diagram">
       <DependentUpon>AlegriaEmbotelladaModel.edmx</DependentUpon>
     </None>
