--- a/Alegria-Embotellada/DataAcces/DataAccess.csproj
+++ b/Alegria-Embotellada/DataAcces/DataAccess.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -66,6 +67,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AlegriaEmbotelladaModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="ConnecionDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sysdiagram.cs">
       <DependentUpon>AlegriaEmbotelladaModel.tt</DependentUpon>
