Se le agrego el metodo de conexión de base de de Datos

--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
@@ -9,7 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;user id=AlegriaEmbotelladaAppESC;password=ut335al3gr143mb0t3ll4d4;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;User ID=AlegriaEmbotelladaAppESC;Password=***********;MultipleActiveResultSets=True;Application Name=EntityFramework" />
+    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;User ID=AlegriaEmbotelladaAppESC;Password=ut335al3gr143mb0t3ll4d4;MultipleActiveResultSets=True;Application Name=EntityFramework" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
