--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/Web.config
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/Alegria-EmbotelladaModel.csdl|res://*/Alegria-EmbotelladaModel.ssdl|res://*/Alegria-EmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;user id=AlegriaEmbotelladaAppESC;password=ut335al3gr143mb0t3ll4d4;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
