--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;user id=AlegriaEmbotelladaAppESC;password=ut335al3gr143mb0t3ll4d4;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;User ID=AlegriaEmbotelladaAppESC;Password=ut335al3gr143mb0t3ll4d4;MultipleActiveResultSets=True;Application Name=EntityFramework" />
+    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
