--- a/Alegria-Embotellada/DataAcces/App.Config
+++ b/Alegria-Embotellada/DataAcces/App.Config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;user id=AlegriaEmbotelladaAppESC;password=ut335al3gr143mb0t3ll4d4;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
