--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/AlegriaEmbotelladaWebApp.csproj
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/AlegriaEmbotelladaWebApp.csproj
@@ -155,9 +155,9 @@
     <Content Include="css\style-wide.css" />
     <Content Include="css\style.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
-    <Content Include="images\Captura de pantalla %2876%29.png" />
-    <Content Include="images\Captura de pantalla %2877%29.png" />
-    <Content Include="images\Captura de pantalla %2878%29.png" />
+    <Content Include="images\login.png" />
+    <Content Include="images\registro.png" />
+    <Content Include="images\menu.png" />
     <Content Include="images\pic01.jpg" />
     <Content Include="images\pic02.png" />
     <Content Include="index.html" />
