--- a/Alegria-Embotellada/AlegriaEmbotelladaWebApp/Web.config
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWebApp/Web.config
@@ -4,9 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
-    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="AlegriaEmbotelladaEntities" connectionString="metadata=res://*/AlegriaEmbotelladaModel.csdl|res://*/AlegriaEmbotelladaModel.ssdl|res://*/AlegriaEmbotelladaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=dbAlegriaEmbotelladaESC_UAT;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AlegriaEmbotelladaConnectionString" connectionString="Data Source=(local);Initial Catalog=dbAlegriaEmbotelladaESC_UAT;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -59,4 +63,14 @@
       </listeners>
     </trace>
   </system.diagnostics>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
