--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/AlegriaEmbotelladaWinFromApp.csproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\AlegriaEmbotelladaWinFromApp.vshost.exe" />
+    <None Include="Resources\gif 2 00_00_00-00_00_10.gif" />
     <None Include="Resources\fondo%28madera21%29.jpg" />
     <None Include="Resources\Logo-AlegriaE%28proceso%29.png" />
   </ItemGroup>
